--- a/res/values-ru-rRU/audio_tweaks_strings.xml
+++ b/res/values-ru-rRU/audio_tweaks_strings.xml
@@ -23,8 +23,16 @@
     <string name="audio_tweaks_a2dp_sbc_prefer_summary">Предпочтительно SBC через AAC или AptX</string>
     <string name="audio_settings_title">Общий</string>
     <string name="audio_bluetooth_title">Bluetooth</string>
+    <string name="audio_bluetooth_summary">Требуется перезапуск Bluetooth, чтобы изменения вступили в силу!</string>
     <string name="audio_tweaks_hq_policy_title">Использовать движок HQ по умолчанию</string>
     <string name="audio_tweaks_hq_policy_summary">Используйте настройки HQ для воспроизведения музыки по умолчанию. Требуется перезагрузка!</string>
     <string name="baikalos_disable_hp_detect_title">Отключить обнаружение наушников</string>
     <string name="baikalos_disable_hp_detect_summary">Отключить определение проводных наушников</string>
+    <string name="audio_tweaks_a2dp_sbc_disable_title">Отключить SBC</string>
+    <string name="audio_tweaks_a2dp_aac_disable_title">Отключить AAC</string>
+    <string name="audio_tweaks_a2dp_aptx_disable_title">Отключить APTX</string>
+    <string name="audio_tweaks_a2dp_aptx_hd_disable_title">Отключить HD APTX</string>
+    <string name="audio_tweaks_a2dp_ldac_disable_title">Отключить LDAC</string>
+    <string name="audio_tweaks_a2dp_sbc_priority_title">Приоритет SBC</string>
+    <string name="audio_tweaks_a2dp_sbc_priority_summary">Приоритет SBC над AAC/APTX/APTX HD</string>
 </resources>
