--- a/res/xml/audio_tweaks.xml
+++ b/res/xml/audio_tweaks.xml
@@ -50,9 +50,9 @@
 
     <PreferenceCategory
         android:key="audio_bluetooth"
-        android:title="@string/audio_bluetooth_title"
-        android:summary="@string/audio_bluetooth_summary">
+        android:title="@string/audio_bluetooth_title">
 
+        <Preference android:title="@string/audio_bluetooth_summary"/>
 
         <com.aicp.gear.preference.GlobalSettingSwitchPreference
             android:key="baikalos_bt_sbc_disabled"
@@ -102,9 +102,20 @@
             android:summary="@string/audio_tweaks_a2dp_sbc_hdx_summary"
             android:defaultValue="false" />
 
+        <Preference
+            style="?android:preferenceInformationStyle"
+            android:key="audio_tweaks_a2dp_last_codec"
+            android:summary="%s"
+            android:title="@string/audio_tweaks_a2dp_last_codec_title"
+            android:selectable="false" />
+
+        <Preference
+            style="?android:preferenceInformationStyle"
+            android:key="audio_tweaks_a2dp_last_bitrate"
+            android:summary="%s"
+            android:title="@string/audio_tweaks_a2dp_last_bitrate_title"
+            android:selectable="false" />
+
     </PreferenceCategory>
-
-
-
 
 </PreferenceScreen>
