Add SBC 49 Khz option
Change-Id: I19c9a5fb5a3e401a5b80b1cfe8b1cba990849e3a

--- a/res/values/audio_tweaks_strings.xml
+++ b/res/values/audio_tweaks_strings.xml
@@ -28,6 +28,9 @@
     <string name="audio_tweaks_a2dp_sbc_hdu_title">Unlimited SBC bitrate</string>
     <string name="audio_tweaks_a2dp_sbc_hdu_summary">Use Unlimited SBC bitrate for A2DP Bluetooth Profile</string>
 
+    <string name="audio_tweaks_a2dp_sbc_48_title">Prefer 48 KHz</string>
+    <string name="audio_tweaks_a2dp_sbc_48_summary">Prefer 48 KHz sampling rate for SBC encoder</string>
+
     <string name="audio_tweaks_a2dp_sbc_prefer_title">Prefer SBC</string>
     <string name="audio_tweaks_a2dp_sbc_prefer_summary">Prefer SBC over AAC or AptX</string>
 
