--- a/res/values-ru-rRU/audio_tweaks_strings.xml
+++ b/res/values-ru-rRU/audio_tweaks_strings.xml
@@ -19,6 +19,8 @@
     <string name="audio_tweaks_a2dp_sbc_hdx_summary">Использовать высочайший SBC битрейт для A2DP профиля Bluetooth</string>
     <string name="audio_tweaks_a2dp_sbc_hdu_title">Не ограничивать битрейт SBC</string>
     <string name="audio_tweaks_a2dp_sbc_hdu_summary">Использовать неограниченный SBC битрейт для A2DP профиля Bluetooth</string>
+    <string name="audio_tweaks_a2dp_sbc_48_title">Предпочесть 48 КГц</string>
+    <string name="audio_tweaks_a2dp_sbc_48_summary">Предпочесть частоту квантования 48 КГц для SBC</string>
     <string name="audio_tweaks_a2dp_sbc_prefer_title">Предпочтительно SBC</string>
     <string name="audio_tweaks_a2dp_sbc_prefer_summary">Предпочтительно SBC через AAC или AptX</string>
     <string name="audio_settings_title">Общий</string>
