Make performance profiles for screen off and idle mode configurable
Change-Id: I6e90ef40bec3537ea5ce9896e818e8817470ad8d

--- a/res/values/system_strings.xml
+++ b/res/values/system_strings.xml
@@ -9,4 +9,7 @@
     <string name="system_tweaks_sec_hwc_title">Disable Secondary HWC</string>
     <string name="system_tweaks_sec_hwc_summary">Disable HW Overlay on secondary display. Fix flickering on Android Auto and WFD.\nREBOOT REQUIRED!</string>
 
+    <string name="scr_off_profile_title">Screen off profile</string>
+    <string name="idle_profile_title">Idle profile</string>
+
 </resources>
