Add Forced Media Rescan into audio tweaks
Change-Id: I0f245258b0af368d05f48389eec5767b726e4101

--- a/res/values/audio_tweaks_strings.xml
+++ b/res/values/audio_tweaks_strings.xml
@@ -67,4 +67,7 @@
     <string name="audio_tweaks_a2dp_last_codec_title">Last used codec</string>
     <string name="audio_tweaks_a2dp_last_bitrate_title">Last used bitrate</string>
 
+    <string name="prefs_media_scan_title">Rescan Media</string>
+    <string name="prefs_media_scan_summary">Force internal storage rescan for new media files</string>
+
 </resources>
