--- a/res/values-ru-rRU/system_strings.xml
+++ b/res/values-ru-rRU/system_strings.xml
@@ -5,5 +5,6 @@
     <string name="system_tweaks_summary">Настройки системы</string>
     <string name="default_profiles_title">Профили по умолчанию</string>
     <string name="system_tweaks_sec_hwc_title">Отключить вторичный HWC</string>
-    <string name="system_tweaks_sec_hwc_summary">Отключите HW Overlay на дополнительном дисплее. Исправление мерцания на Android Auto и WFD.\nТРЕБУЕТСЯ ПЕРЕЗАГРУЗКА!</string>
+    <string name="scr_off_profile_title">Профиль при выключенном экране</string>
+    <string name="idle_profile_title">Профиль в режиме ожидания</string>
 </resources>
