Double-line statusbar [2/2]
Change-Id: I06301149ee40cd0e474c468fc6844e2cd8b60e11

--- a/res/xml/system_tweaks.xml
+++ b/res/xml/system_tweaks.xml
@@ -73,4 +73,11 @@
             android:defaultValue="false" />
 
 
+    <com.aicp.gear.preference.GlobalSettingSwitchPreference
+        android:key="baikalos_dlsb_enabled"
+        android:title="@string/baikalos_dlsb_enabled_title"
+        android:summary="@string/baikalos_dlsb_enabled_summary"
+        android:defaultValue="false"
+        android:disableDependentsState="true" />
+
 </PreferenceScreen>
