Introduce 'cold' thermal profile
Change-Id: I32e45e22814e01d836855a595bd95d2c0d8172d0

--- a/res/values/app_profile_strings.xml
+++ b/res/values/app_profile_strings.xml
@@ -30,6 +30,7 @@
     <string name="thermal_camera">Camera</string>
     <string name="thermal_reader">Reader</string>
     <string name="thermal_cool">Cool</string>
+    <string name="thermal_cold">Cold</string>
     <string name="thermal_incall">In Call</string>
     <string name="thermal_vr">VR</string>
 
