--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -23,7 +23,8 @@
     <string name="thermal_high">Высокий</string>
     <string name="thermal_camera">Камера</string>
     <string name="thermal_reader">Читалка</string>
-    <string name="thermal_cool">Холодный</string>
+    <string name="thermal_cool">Прохладный</string>
+    <string name="thermal_cold">Холодный</string>
     <string name="thermal_incall">В режиме разговора</string>
     <string name="thermal_vr">VR</string>
     <string name="brightness_default">По умолчанию</string>
