--- a/res/values/system_strings.xml
+++ b/res/values/system_strings.xml
@@ -18,4 +18,8 @@
     <string name="baikalos_dlsb_enabled_title">Dual-line Statusbar</string>
     <string name="baikalos_dlsb_enabled_summary">Enable dual-line statusbar. Reboot required!</string>
 
+    <!-- Old mobile type icons -->
+    <string name="use_old_mobiletype_title">Small mobile type icon</string>
+    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
+
 </resources>
