Custom rounded corners
Change-Id: I8786b7edf522ef8e0e0fb6d09f8ddab5d09a5b12

--- a/res/xml/system_tweaks.xml
+++ b/res/xml/system_tweaks.xml
@@ -18,6 +18,8 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/system_tweaks_title">
 
     <!-- PreferenceCategory
@@ -93,5 +95,34 @@
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
             android:defaultValue="false" />      
+
+
+    <PreferenceCategory
+        android:key="corners_category"
+        android:title="@string/corners_category" >
+
+        <com.aicp.gear.preference.SecureSettingSwitchPreference
+            android:key="sysui_rounded_fwvals"
+            android:title="@string/corner_fwvals"
+            android:summary="@string/corner_fwvals_summary"
+            android:defaultValue="true"
+            android:disableDependentsState="true" />
+
+        <com.aicp.gear.preference.SecureSettingSeekBarPreference
+            android:key="sysui_rounded_size"
+            android:title="@string/corner_radius"
+            android:max="60"
+            android:min="0"
+            android:persistent="false"
+            android:dependency="sysui_rounded_fwvals" />
+
+        <com.aicp.gear.preference.SecureSettingSeekBarPreference
+            android:key="sysui_rounded_content_padding"
+            android:title="@string/content_padding"
+            android:max="30"
+            android:min="0"
+            android:persistent="false"
+            android:dependency="sysui_rounded_fwvals" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
