New AVRCP option
Change-Id: I9d711d11a90ec604e750dea26b42d024b87aabcb

--- a/res/values/audio_tweaks_strings.xml
+++ b/res/values/audio_tweaks_strings.xml
@@ -70,4 +70,7 @@
     <string name="prefs_media_scan_title">Rescan Media</string>
     <string name="prefs_media_scan_summary">Force internal storage rescan for new media files</string>
 
+    <string name="audio_tweaks_new_avrcp_title">New AVRCP</string>
+    <string name="audio_tweaks_new_avrcp_summary">Enable new version of AVRCP</string>
+
 </resources>
