--- a/res/values/audio_tweaks_strings.xml
+++ b/res/values/audio_tweaks_strings.xml
@@ -74,10 +74,10 @@
     <string name="audio_tweaks_new_avrcp_summary">Enable new version of AVRCP</string>
 
     <string name="audio_effects_title">Effects</string>
-    <string name="audio_effects_summary">REBOOT REQUIRED for changes to take effect!</string>
+    <string name="audio_effects_summary">REBOOT REQUIRED!</string>
     <string name="audio_effects_system_title">Disable System Effects</string>
     <string name="audio_effects_system_summary">Disable common AOSP audio effects</string>
-    <string name="audio_effects_qc_title">Disable Qalcomm Effects</string>
+    <string name="audio_effects_qc_title">Disable Qualcomm Effects</string>
     <string name="audio_effects_qc_summary">Disable qualcomm enhanced hardware effects</string>
     <string name="audio_effects_dolby_title">Enable Dolby</string>
     <string name="audio_effects_dolby_summary">Enable systemwide Dolby effect</string>
