--- a/res/values/app_profile_arrays.xml
+++ b/res/values/app_profile_arrays.xml
@@ -5,6 +5,7 @@
     <string-array name="performance_listentries">
     	<item>@string/performance_default</item>
     	<item>@string/performance_balance</item>
+    	<item>@string/performance_limited</item>
     	<item>@string/performance_performance</item>
     	<item>@string/performance_gaming</item>
     	<item>@string/performance_battery</item>
@@ -12,6 +13,7 @@
      <string-array name="performance_listvalues">
     	<item>default</item>
     	<item>balance</item>
+    	<item>limited</item>
     	<item>performance</item>
     	<item>gaming</item>
     	<item>battery</item>
