--- a/res/values/power_save_strings.xml
+++ b/res/values/power_save_strings.xml
@@ -14,10 +14,21 @@
 
     <string name="default_profiles_title">Default profiles</string>
 
-    <string name="powersave_hide_idle_title">Hide Idle from GMS</string>
-    <string name="powersave_hide_idle_summary">Hide Idle state from Google Play Services. Could fix notification problems. Increases battery drain! </string>
     <string name="powersave_unrestricted_network_title">Unrestricted Network</string>
     <string name="powersave_unrestricted_network_summary">Do not restrict network access in Idle state. Could fix notification problems. Increases battery drain!</string>
+
+    <string name="powersave_gms_title">Google Services</string>
+    <string name="powersave_gms_summary">Options for Google Play Services</string>
+    <string name="powersave_hide_idle_title">Hide Idle from GMS</string>
+    <string name="powersave_hide_idle_summary">Hide Idle state from Google Play Services. Could fix notification problems. Increases battery drain! </string>
+    <string name="powersave_gms_restricted_title">Restrict Always</string>
+    <string name="powersave_gms_restricted_summary">Always Restrict Google Play Services in background</string>
+    <string name="powersave_gms_idle_restricted_title">Restrict in Idle</string>
+    <string name="powersave_gms_idle_restricted_summary">Always Restrict Google Play Services in background while in Idle Mode</string>
+    <string name="powersave_gms_stamina_restricted_title">Restrict in Stamina</string>
+    <string name="powersave_gms_stamina_restricted_summary">Always Restrict Google Play Services in background while in Stamina Mode</string>
+    <string name="powersave_gps_restricted_title">Restrict Play Market</string>
+    <string name="powersave_gps_restricted_summary">Restrict Play Market activity in background</string>
 
     <!-- Batery whitelist -->
     <string name="prefs_battery_saver_title">Whitelist</string>
